test/libsolidity/syntaxTests/nameAndTypeResolution/333_fixed_point_casting_exponents_15.sol
contract test {
    function f() public {
        ufixed a = 3 ** ufixed(1.5);
    }
}
// ----
// UnimplementedFeatureError: Not yet implemented - FixedPointType.
